--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>AdAction/iteration1</artifactId>
+    <artifactId>iteration1</artifactId>
     <packaging>jar</packaging>
     <version>0.1.0</version>
 
@@ -39,6 +39,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>fizzBuzz.FizzBuzz</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
